trunk/Archive2/85/6970eb2642c71c/output
C++11
main.cpp: In function 'int main(int, char**)':
main.cpp:34:3: error: static assertion failed: std::make_unique is not present!
   static_assert (has::make_unique::value, "std::make_unique is not present!");
   ^


C++1y:
SUCCESS